--- a/rag_langchain.ipynb
+++ b/rag_langchain.ipynb
@@ -2,23 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +196,7 @@
     "# Augmented Generation\n",
     "\n",
     "llm_stream_openai = ChatOpenAI(\n",
-    "    model=\"gpt-4o\",  # Here you could use \"o1-preview\" or \"o1-mini\" if you already have access to them\n",
+    "    model=\"gpt-4o-mini\",  # Here you could use \"o1-preview\" or \"o1-mini\" if you already have access to them\n",
     "    temperature=0.3,\n",
     "    streaming=True,\n",
     ")\n",
@@ -241,42 +234,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sure! Microsoft Azure, commonly referred to as Azure, is a cloud computing platform and service created by Microsoft. It provides a wide range of cloud services, including those for computing, analytics, storage, and networking. Users can choose and configure these services to develop and scale new applications or run existing applications in the public cloud.\n",
+      "Microsoft Azure, commonly referred to as Azure, is a cloud computing platform and service created by Microsoft. It provides a wide range of cloud services, including those for computing, analytics, storage, and networking. Users can choose and configure these services to meet their specific needs.\n",
       "\n",
-      "Here are some key aspects of Azure:\n",
+      "Here are some key features and components of Azure:\n",
       "\n",
-      "1. **Compute Services**: Azure offers virtual machines, containers, and serverless computing options. This includes Azure Virtual Machines, Azure Kubernetes Service (AKS), and Azure Functions.\n",
+      "1. **Infrastructure as a Service (IaaS)**: Azure allows users to create and manage virtual machines (VMs) in the cloud, enabling them to run applications and services without the need for physical hardware.\n",
       "\n",
-      "2. **Storage Solutions**: Azure provides scalable cloud storage solutions such as Azure Blob Storage, Azure Disk Storage, and Azure File Storage. These services cater to different data storage needs, from unstructured data to persistent disk storage.\n",
+      "2. **Platform as a Service (PaaS)**: Azure provides a platform for developers to build, deploy, and manage applications without worrying about the underlying infrastructure. This includes services like Azure App Service and Azure Functions.\n",
       "\n",
-      "3. **Networking**: Azure offers a variety of networking services, including Azure Virtual Network, Azure Load Balancer, and Azure Application Gateway. These services help in building secure and high-performance network architectures.\n",
+      "3. **Software as a Service (SaaS)**: Azure supports various SaaS applications, allowing organizations to use software hosted in the cloud without needing to manage the underlying infrastructure.\n",
       "\n",
-      "4. **Databases**: Azure supports multiple database services, including Azure SQL Database, Azure Cosmos DB, and Azure Database for MySQL, PostgreSQL, and MariaDB. These managed database services offer high availability, scalability, and security.\n",
+      "4. **Storage Solutions**: Azure offers various storage options, including Blob Storage for unstructured data, Table Storage for NoSQL data, and Azure SQL Database for relational data.\n",
       "\n",
-      "5. **AI and Machine Learning**: Azure provides a suite of AI and machine learning services, such as Azure Machine Learning, Azure Cognitive Services, and Azure Bot Service. These tools help developers build intelligent applications.\n",
+      "5. **Networking**: Azure provides networking services like Azure Virtual Network, Azure Load Balancer, and Azure VPN Gateway, allowing users to create secure and scalable network architectures.\n",
       "\n",
-      "6. **Analytics**: Azure offers a range of analytics services, including Azure Synapse Analytics, Azure HDInsight, and Azure Data Lake Analytics. These services enable big data processing and advanced analytics.\n",
+      "6. **AI and Machine Learning**: Azure includes services like Azure Machine Learning and Azure Cognitive Services, enabling developers to build intelligent applications that can analyze data, recognize patterns, and make predictions.\n",
       "\n",
-      "7. **DevOps**: Azure DevOps provides development tools for continuous integration and continuous delivery (CI/CD). It includes services like Azure Pipelines, Azure Repos, and Azure Artifacts.\n",
+      "7. **Security and Compliance**: Azure emphasizes security with features like Azure Security Center, Azure Active Directory, and compliance certifications to help organizations meet regulatory requirements.\n",
       "\n",
-      "8. **Security and Compliance**: Azure emphasizes security with services like Azure Security Center, Azure Active Directory, and Azure Key Vault. It also complies with numerous international and industry-specific standards.\n",
+      "8. **Global Reach**: Azure has a vast network of data centers located around the world, allowing users to deploy applications and services closer to their customers for improved performance and compliance with local regulations.\n",
       "\n",
-      "9. **IoT**: Azure IoT Hub and Azure IoT Central are services designed to connect, monitor, and manage IoT devices at scale.\n",
+      "9. **Integration with Microsoft Products**: Azure integrates seamlessly with other Microsoft products and services, such as Office 365, Dynamics 365, and Power BI, providing a comprehensive ecosystem for businesses.\n",
       "\n",
-      "10. **Hybrid Cloud**: Azure supports hybrid cloud environments with services like Azure Arc and Azure Stack, allowing businesses to run Azure services on-premises or in other cloud environments.\n",
+      "10. **Hybrid Cloud Capabilities**: Azure supports hybrid cloud solutions, allowing organizations to integrate their on-premises infrastructure with Azure services for greater flexibility and scalability.\n",
       "\n",
-      "11. **Management and Governance**: Azure provides tools for managing and governing cloud resources, such as Azure Policy, Azure Cost Management, and Azure Monitor.\n",
-      "\n",
-      "Azure is known for its global reach, with data centers in numerous regions worldwide, providing low-latency access and data residency options. It supports a wide range of programming languages, frameworks, and operating systems, making it a versatile choice for developers and enterprises.\n",
-      "\n",
-      "Overall, Azure is a comprehensive cloud platform that helps organizations innovate, scale, and manage their IT resources efficiently."
+      "Overall, Azure is a versatile and powerful platform that caters to a wide range of cloud computing needs, making it a popular choice for businesses of all sizes."
      ]
     }
    ],
@@ -289,8 +278,8 @@
     "\n",
     "llm_stream = AzureChatOpenAI(\n",
     "    azure_endpoint=os.getenv(\"AZ_OPENAI_ENDPOINT\"),\n",
-    "    openai_api_version=\"2024-02-15-preview\",\n",
-    "    model_name=\"gpt-4o\",\n",
+    "    openai_api_version=\"2024-05-01-preview\",\n",
+    "    model_name=\"gpt-4o-mini\",\n",
     "    openai_api_key=os.getenv(\"AZ_OPENAI_API_KEY\"),\n",
     "    openai_api_type=\"azure\",\n",
     "    temperature=0.3,\n",
@@ -302,6 +291,13 @@
     "for chunk in llm_stream.stream(prompt):\n",
     "    print(chunk.content, end=\"\", flush=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -320,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
